# collective.ajaxify

./: .editorconfig  .gitignore  .gitlab-ci.yml  .meta.toml  .stylelintrc.mjs  CHANGES.md  LICENSE.rst  MANIFEST.in  Makefile  README.md  constraints.txt  copy-resources.sh  instance.yaml  instance.zcml  mx.ini  package.json  pyproject.toml  setup.py  tox.ini  webpack.config.js
.github/workflows/: test-matrix.yml
resources/: base_url.js  bundle.js
src/collective/ajaxify/: configure.zcml  setuphandlers.py
src/collective/ajaxify/browser/: main_template-orig.pt  main_template.pt  main_template.py  main_template_ajax-orig.pt  main_template_ajax.pt
src/collective/ajaxify/browser/static/mockup/: bundle.min.js  bundle.min.js.map
src/collective/ajaxify/browser/static/mockup/chunks/: 37004.2eea0c253567238b30eb.min.js.map  47073.1a02d3e9a3ed76ec8cb1.min.js  97106.941ab7a6768095ca7c92.min.js.map
src/collective/ajaxify/browser/static/patternslib/: remote.min.js.map
src/collective/ajaxify/browser/static/scripts/: bundle.min.js  bundle.min.js.map  collective-ajaxify.bundle.min.js  collective-ajaxify.bundle.min.js.map  collective-ajaxify.remote.min.js  collective-ajaxify.remote.min.js.map  remote.min.js  remote.min.js.map
src/collective/ajaxify/browser/static/scripts/chunks/: 10088.6be1f39fd43196167b53.min.js.map  1012.e1bab23ce0549c892e19.min.js  1012.e1bab23ce0549c892e19.min.js.map  10230.5e293928270f31077187.min.js.map  10246.2cc4221433f1e9d0bad7.min.js.map  10506.b82e6a785a60a4d21c46.min.js.map  11025.44bac335511dae7e4fc7.min.js.map  11074.dbdfd1be5b10f1253a3a.min.js.map  11203.6355aa02c4f7d2e16614.min.js.map  11470.96d05730b3c0f0c944a6.min.js.map  11483.ece647acc5cc6d7ddbc6.min.js.map  11713.16eae7fcc060d73d1a7e.min.js.map  11885.8bf865258b6b0c0cb414.min.js.map  119.d1f5a47e8872d02ede99.min.js.map  1192.fd9c241fb25129fae6b0.min.js.map  12205.9cd3dd6325a077bb8d41.min.js.map  1221.a50faac4bdbd064ba632.min.js.map  12401.99eac9b09f1c4c06a762.min.js.map  12962.7e4e08fc487f4e0f4410.min.js.map  1306.f3eb07cf5a61f0780526.min.js.map  13190.770092278212ed65f21a.min.js.map  13666.a5b57b888bb35e49cc10.min.js.map  13732.2cfe294b3d07a4dcfbf2.min.js.map  13833.989b37b708c7a8129587.min.js.map  13849.1707dcec05f2ddb96478.min.js.map  13933.5a073cead2f0e3dc1a80.min.js.map  14058.86be43a6664b43621864.min.js.map  14205.4aa131290d90c8a1c4bc.min.js.map  14325.51b18d8657b29c8feac4.min.js.map  (+672 more)
src/collective/ajaxify/profiles/default/: registry.xml
src/collective/ajaxify/profiles/uninstall/: registry.xml
src/thet/ajaxify/browser/: main_template.pt
src/thet/ajaxify/browser/static/scripts/: remote.min.js
src/thet/ajaxify/profiles/uninstall/: metadata.xml  registry.xml
src/thet/spa/: configure-genericsetup.zcml  configure.zcml  interfaces.py  set_theme.py  setuphandlers.py
src/thet/spa/browser/: configure.zcml  main_template.pt  main_template.py  main_template_ajax.pt
src/thet/spa/browser/static/mockup/: remote.min.js  remote.min.js.map
src/thet/spa/browser/static/patternslib/: bundle.min.js  bundle.min.js.map  remote.min.js
src/thet/spa/browser/static/scripts/: bundle.min.js  bundle.min.js.map  remote.min.js  remote.min.js.map
src/thet/spa/profiles/default/: browserlayer.xml  metadata.xml  registry.xml
src/thet/spa/profiles/uninstall/: browserlayer.xml  registry.xml
src/thet/spa/upgrades/: configure.zcml
(+53 files in other folders)
